syntax = "proto3";

package semio.server.v1;

option go_package = "github.com/usalu/semio/src/packages/go/server/v1";
option csharp_namespace = "Semio.Server.V1";

import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Semio";
    version: "0.2.0";
    contact: {
      name: "Ueli Saluz";
      url: "https://github.com/usalu/semio";
      email: "semio@posteo.org";
    };
    license: {
      name: "AGPL-3.0-or-later";
      // url: "https://github.com/usalu/semio/LICENSE.md";
    };
  };
};

// üñ•Ô∏è Server (srv/Sr) service is has access all apis of semio.
service ServerService {
  //   option (google.api.default_host) = "localhost:50000"; 
}